<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.springframework.plugin</groupId>
	<artifactId>spring-plugin</artifactId>
	<packaging>pom</packaging>
	<name>Spring Plugin</name>
	<version>4.0.0-SNAPSHOT</version>
	<description>Simple plugin infrastructure</description>

	<organization>
		<name>VMware, Inc.</name>
		<url>https://www.vmware.com</url>
	</organization>
	<inceptionYear>2008</inceptionYear>
	<url>https://github.com/spring-projects/spring-plugin</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<comments>
			Copyright 2010-2022 the original author or authors.

			Licensed under the Apache License, Version 2.0 (the "License");
			you may not use this file except in compliance with the License.
			You may obtain a copy of the License at

				 https://www.apache.org/licenses/LICENSE-2.0

			Unless required by applicable law or agreed to in writing, software
			distributed under the License is distributed on an "AS IS" BASIS,
			WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
			implied.
			See the License for the specific language governing permissions and
			limitations under the License.
			</comments>
		</license>
	</licenses>

	<modules>
		<module>core</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<assertj.version>3.23.1</assertj.version>
		<junit.version>5.9.1</junit.version>
		<logback.version>1.4.4</logback.version>
		<mockito.version>4.9.0</mockito.version>
		<spring.version>7.0.0-SNAPSHOT</spring.version>
		<slf4j.version>2.0.3</slf4j.version>

		<artifactory-maven-plugin.version>3.4.0</artifactory-maven-plugin.version>

		<java-module-name>spring.plugin</java-module-name>
	</properties>

	<developers>
		<developer>
			<id>drotbohm</id>
			<name>Oliver Drotbohm</name>
			<email>odrotbohm@vmware.com</email>
			<organization>VMware</organization>
			<organizationUrl>https://www.spring.io</organizationUrl>
			<roles>
				<role>Project lead</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<profiles>

		<profile>
			<id>spring-next</id>
			<properties>
				<spring.version>6.0.1-SNAPSHOT</spring.version>
			</properties>
			<repositories>
				<repository>
					<id>spring-snapshots</id>
					<url>https://repo.spring.io/snapshot</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<!-- Profile to be run on the CI server, JARs JavaDocs -->
			<id>ci</id>

			<build>
				<plugins>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>create-javadoc-jar</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
						<configuration>
							<additionalJOptions>
								<additionalJOption>-Xdoclint:none</additionalJOption>
							</additionalJOptions>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>

		<profile>
			<id>artifactory</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jfrog.buildinfo</groupId>
						<artifactId>artifactory-maven-plugin</artifactId>
						<version>${artifactory-maven-plugin.version}</version>
						<inherited>false</inherited>
						<executions>
							<execution>
								<id>deploy-to-artifactory</id>
								<goals>
									<goal>publish</goal>
								</goals>
								<configuration>
									<publisher>
										<contextUrl>https://repo.spring.io</contextUrl>
										<username>${env.ARTIFACTORY_USERNAME}</username>
										<password>${env.ARTIFACTORY_PASSWORD}</password>
										<repoKey>libs-milestone-local</repoKey>
										<snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
									</publisher>
									<buildInfo>
										<buildName>CI build for Spring Plugin ${project.version}</buildName>
									</buildInfo>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>sonatype</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<passphrase>${env.GPG_PASSPHRASE}</passphrase>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>sonatype-new</id>
					<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
				</repository>
			</distributionManagement>
		</profile>

	</profiles>

	<dependencies>

		<!-- Common test dependencies -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<defaultGoal>verify</defaultGoal>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
							<Automatic-Module-Name>${java-module-name}</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.7</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
						<configuration>
							<updatePomFile>true</updatePomFile>
							<flattenMode>oss</flattenMode>
							<pomElements>
								<distributionManagement>remove</distributionManagement>
								<properties>remove</properties>
								<repositories>remove</repositories>
								<profiles>remove</profiles>
							</pomElements>
						</configuration>
					</execution>
					<execution>
						<id>flatten-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M6</version>
				<configuration>
					<releaseProfiles>sonatype</releaseProfiles>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<pushChanges>false</pushChanges>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<localCheckout>true</localCheckout>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<scm>
		<url>https://github.com/spring-projects/spring-plugin</url>
		<connection>scm:git:git://github.com/spring-projects/spring-plugin.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:spring-projects/spring-plugin.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<ciManagement>
		<system>Bamboo</system>
		<url>https://build.springsource.org/browse/PLUGIN-MASTER</url>
	</ciManagement>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/spring-projects/spring-plugin/issues</url>
	</issueManagement>

	<repositories>
		<repository>
			<id>spring-milestone</id>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshot</id>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

</project>
